examples/modules/network/network.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-08-01/deploymentTemplate.json#",
    "contentVersion": "9.0.0.0",
    "parameters": {
        "appNsg": {
            "defaultValue": "Default",
            "type": "String",
            "metadata": {
                "description": "Valid values include 'Default', 'None' or an existing network security group name. A value of 'Default' creates a application security group and attaches it to the application network. A specified security group is associated to application network."
            }
        },
        "mgmtNsg": {
            "defaultValue": "Default",
            "type": "String",
            "metadata": {
                "description": "Valid values include 'Default', 'None', or an existing network security group name. A value of 'Default' creates a management security group and attaches it to the management network. A specified security group is associated to management network."
            }
        },
        "numSubnets": {
            "defaultValue": 1,
            "type": "Int",
            "metadata": {
                "description": "Indicate the number of subnets to create."
            }
        },
        "provisionPublicIP": {
            "defaultValue": false,
            "type": "Bool",
            "metadata": {
                "description": "Valid values include true or false. When set to false, internet traffic is denied. When set to true, internet traffic is allowed."
            }
        },
        "restrictedSrcMgmtAddress": {
            "defaultValue": "*",
            "type": "String",
            "metadata": {
                "description": "When creating management security group, this field restricts management access to a specific network or address. Enter an IP address or address range in CIDR notation, or asterisk for all sources"
            }
        },
        "restrictedSrcMgmtPort": {
            "defaultValue": "443",
            "type": "String",
            "metadata": {
                "description": "When creating management security group, this field specifies port used to access BIG-IP admin portal."
            }
        },
        "virtualNetworkName": {
            "defaultValue": "virtualNetwork",
            "type": "String",
            "metadata": {
                "description": "Supply a name for virtual network."
            }
        },
        "vnetAddressPrefix": {
            "defaultValue": "10.0",
            "type": "String",
            "metadata": {
                "description": "Enter the start of the CIDR block used when creating the vnet and subnets.  You MUST type just the first two octets of the /16 virtual network that will be created, for example '10.0', '10.100', 192.168'."
            }
        },
        "tagValues": {
            "defaultValue": {
                "application": "APP",
                "cost": "COST",
                "environment": "ENV",
                "group": "GROUP",
                "owner": "OWNER"
            },
            "type": "Object",
            "metadata": {
                "description": "Default key/value resource tags will be added to the resources in this deployment, if you would like the values to be unique adjust them as needed for each key."
            }
        }
    },
    "variables": {
        "appSecurityGroupName": "[if(equals(parameters('appNsg'), 'Default'), 'appNSG', concat(parameters('appNsg'), '-appNsg'))]",
        "appSecurityRules": [
            {
                "name": "app_allow_http",
                "properties": {
                    "access": "Allow",
                    "description": "Un-encrypted Web Application",
                    "destinationAddressPrefix": "*",
                    "destinationPortRange": "80",
                    "direction": "Inbound",
                    "priority": 110,
                    "protocol": "Tcp",
                    "sourceAddressPrefix": "*",
                    "sourcePortRange": "*"
                }
            },
            {
                "name": "app_allow_https",
                "properties": {
                    "access": "Allow",
                    "description": "Encrypted Web Application",
                    "destinationAddressPrefix": "*",
                    "destinationPortRange": "443",
                    "direction": "Inbound",
                    "priority": 111,
                    "protocol": "Tcp",
                    "sourceAddressPrefix": "*",
                    "sourcePortRange": "*"
                }
            },
            {
                "name": "allow_loadBalancer_traffic",
                "properties": {
                    "access": "Allow",
                    "description": "Outbound traffic through load balancer",
                    "destinationAddressPrefix": "AzureLoadBalancer",
                    "destinationPortRange": "*",
                    "direction": "Outbound",
                    "priority": 110,
                    "protocol": "Tcp",
                    "sourceAddressPrefix": "*",
                    "sourcePortRange": "*"
                }
            },
            {
                "name": "internet_traffic",
                "properties": {
                    "access": "[if(parameters('provisionPublicIP'), 'Allow', 'Deny')]",
                    "description": "All TCP Internet Traffic to Application",
                    "destinationAddressPrefix": "*",
                    "destinationPortRange": "*",
                    "direction": "Inbound",
                    "priority": 113,
                    "protocol": "Tcp",
                    "sourceAddressPrefix": "Internet",
                    "sourcePortRange": "*"
                }
            }
        ],
        "appSubnet": [
            {
                "name": "appSubnet",
                "properties": {
                    "addressPrefix": "[concat(parameters('vnetAddressPrefix'), '.1.0/24')]"
                }
            }
        ],
        "appSubnetNsg": [
            {
                "name": "appSubnet",
                "properties": {
                    "addressPrefix": "[concat(parameters('vnetAddressPrefix'), '.1.0/24')]",
                    "networkSecurityGroup": {
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('appSecurityGroupName'))]"
                    }
                }
            }
        ],
        "calcNumSubnets": "[if(lessOrEquals(sub(parameters('numSubnets'), 2), 0), 0, sub(parameters('numSubnets'), 2))]",
        "combineSecurityRules": "[union(variables('mgmtSecurityRules'), variables('appSecurityRules'))]",
        "copy": [
            {
                "count": "[variables('calcNumSubnets')]",
                "input": {
                    "name": "[concat('subnet', copyIndex('constructSubnetArray', 2))]",
                    "properties": {
                        "addressPrefix": "[concat(parameters('vnetAddressPrefix'), '.', copyIndex('constructSubnetArray', 2),'.0/24')]"
                    }
                },
                "name": "constructSubnetArray"
            }
        ],
        "mgmtId": "[if(equals(parameters('mgmtNsg'), 'None'), json('null'), resourceId('Microsoft.Network/networkSecurityGroups', variables('mgmtSecurityGroupName')))]",
        "mgmtSecurityGroupName": "[if(equals(parameters('mgmtNsg'), 'Default'), 'mgmtNSG', concat(parameters('mgmtNsg'), '-mgmtNsg'))]",
        "mgmtSecurityRules": [
            {
                "name": "mgmt_allow_https",
                "properties": {
                    "access": "Allow",
                    "description": "BIG-IP Admin Portal",
                    "destinationAddressPrefix": "*",
                    "destinationPortRange": "[parameters('restrictedSrcMgmtPort')]",
                    "direction": "Inbound",
                    "priority": 101,
                    "protocol": "Tcp",
                    "sourceAddressPrefix": "[parameters('restrictedSrcMgmtAddress')]",
                    "sourcePortRange": "*"
                }
            },
            {
                "name": "mgmt_allow_ssh",
                "properties": {
                    "access": "Allow",
                    "description": "BIG-IP SSH",
                    "destinationAddressPrefix": "*",
                    "destinationPortRange": "22",
                    "direction": "Inbound",
                    "priority": 102,
                    "protocol": "Tcp",
                    "sourceAddressPrefix": "[parameters('restrictedSrcMgmtAddress')]",
                    "sourcePortRange": "*"
                }
            }
        ],
        "mgmtSubnet": [
            {
                "name": "mgmtSubnet",
                "properties": {
                    "addressPrefix": "[concat(parameters('vnetAddressPrefix'), '.0.0/24')]"
                }
            }
        ],
        "mgmtSubnetNsg": [
            {
                "name": "mgmtSubnet",
                "properties": {
                    "addressPrefix": "[concat(parameters('vnetAddressPrefix'), '.0.0/24')]",
                    "networkSecurityGroup": {
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('mgmtSecurityGroupName'))]"
                    }
                }
            }
        ],
        "networkApiVersion": "2019-11-01",
        "subnetArray": "[if(equals(parameters('numSubnets'), 1), if(equals(parameters('mgmtNsg'), 'None'), variables('mgmtSubnet'), variables('mgmtSubnetNsg')), union(if(equals(parameters('mgmtNsg'), 'None'), variables('mgmtSubnet'), variables('mgmtSubnetNsg')), if(equals(parameters('appNsg'), 'None'), variables('appSubnet'), variables('appSubnetNsg')), variables('constructSubnetArray')))]"
    },
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "[variables('networkApiVersion')]",
            "name": "[variables('mgmtSecurityGroupName')]",
            "location": "[resourceGroup().location]",
            "tags": "[if(empty(parameters('tagValues')), json('null'), parameters('tagValues'))]",
            "properties": {
                "securityRules": "[if(lessOrEquals(parameters('numSubnets'), 2), variables('combineSecurityRules'), variables('mgmtSecurityRules'))]"
            },
            "condition": "[not(equals(parameters('mgmtNsg'), 'None'))]"
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "[variables('networkApiVersion')]",
            "name": "[variables('appSecurityGroupName')]",
            "location": "[resourceGroup().location]",
            "tags": "[if(empty(parameters('tagValues')), json('null'), parameters('tagValues'))]",
            "properties": {
                "securityRules": "[variables('appSecurityRules')]"
            },
            "condition": "[not(equals(parameters('appNsg'), 'None'))]"
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "[variables('networkApiVersion')]",
            "name": "[parameters('virtualNetworkName')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[variables('mgmtSecurityGroupName')]",
                "[variables('appSecurityGroupName')]"
            ],
            "tags": "[if(empty(parameters('tagValues')), json('null'), parameters('tagValues'))]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[concat(parameters('vnetAddressPrefix'), '.0.0/16')]"
                    ]
                },
                "subnets": "[variables('subnetArray')]"
            }
        }
    ],
    "outputs": {
        "appNSG": {
            "condition": "[not(equals(parameters('appNsg'), 'None'))]",
            "type": "String",
            "value": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('appSecurityGroupName'))]"
        },
        "appSubnet": {
            "condition": "[greaterOrEquals(parameters('numSubnets'), 2)]",
            "type": "String",
            "value": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), 'appSubnet')]"
        },
        "mgmtNSG": {
            "condition": "[not(equals(parameters('mgmtNsg'), 'None'))]",
            "type": "String",
            "value": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('mgmtSecurityGroupName'))]"
        },
        "mgmtSubnet": {
            "type": "String",
            "value": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), 'mgmtSubnet')]"
        },
        "subnets": {
            "condition": "[greaterOrEquals(parameters('numSubnets'), 3)]",
            "copy": {
                "count": "[variables('calcNumSubnets')]",
                "input": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), concat('subnet', copyIndex(2)))]"
            },
            "type": "Array"
        },
        "virtualNetwork": {
            "type": "String",
            "value": "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))]"
        }
    }
}
